# fastapi-boilerplate

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  appspec.yml  docker-compose.yml  locustfile.py  postgres.yml  pyproject.toml
.github/workflows/: main.yml
app/: configs.py  database.py  dependencies.py  exceptions.py  main.py  middlewares.py  security.py
app/domain/: models.py  routes.py
app/domain/auth/: routers.py  schemas.py
app/domain/subjects/: crud.py  models.py  routers.py  schemas.py
app/domain/users/: crud.py  models.py  routers.py  schemas.py
app/exceptions/: auth.py  base.py  subjects.py  users.py
migrations/: env.py
migrations/versions/: 28df99838166_init.py  58cbebb39716_create_users_table.py  711a7256a242_create_users_table.py  d40e31be682d_create_users_subjects.py
templates/: default.conf.template
tests/: conftest.py  test_auth.py  test_subjects.py  test_users.py
