[tool.poetry]
name = "somasem-v2"
version = "0.1.0"
description = ""
authors = ["Lim Jihwan <ghwn5936@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
requests = "^2.27.1"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
